--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "class-variance-authority": "^0.6.1",
     "cloudinary": "^1.36.4",
+    "clsx": "^1.2.1",
     "formik": "^2.2.9",
     "gridfs-stream": "^1.1.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "lucide-react": "^0.257.0",
     "moment": "^2.29.4",
     "mongoose": "^7.1.1",
     "randomcolor": "^0.6.2",
@@ -33,6 +36,8 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
@@ -59,5 +64,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "author": "Dananjaya",
+  "license": "ISC"
 }
