--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.12.1",
-    "@mui/x-date-pickers": "^6.2.1",
-    "@zoomus/websdk": "^2.12.0",
-    "concurrently": "^8.0.1",
-    "dayjs": "^1.11.7",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28"
+    "concurrently": "^8.0.1"
   }
 }
